Criando paths http para user
